src/test/ui/issues/issue-24036.stderr
error[E0308]: mismatched types
  --> $DIR/issue-24036.rs:3:9
   |
LL |     let mut x = |c| c + 1;
   |                 --------- the expected closure
LL |     x = |c| c + 1;
   |         ^^^^^^^^^ expected closure, found a different closure
   |
   = note: expected closure `[closure@$DIR/issue-24036.rs:2:17: 2:26]`
              found closure `[closure@$DIR/issue-24036.rs:3:9: 3:18]`
   = note: no two closures, even if identical, have the same type
   = help: consider boxing your closure and/or using it as a trait object

error[E0284]: type annotations needed for `fn(_) -> _`
  --> $DIR/issue-24036.rs:9:20
   |
LL |         1 => |c| c + 1,
   |                    ^ cannot infer type
   |
   = note: cannot satisfy `<_ as Add<i32>>::Output == _`
help: consider giving this binding the explicit type `fn(_) -> _`, with the type parameters specified
   |
LL |     let x: fn(_) -> _ = match 1usize {
   |          ^^^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0284, E0308.
For more information about an error, try `rustc --explain E0284`.
